<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_hello" />

	<!-- Date-Selection -->
    <CheckBox android:id="@+id/checkbox_monday"    android:text="@string/monday"    android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_tuesday"   android:text="@string/tuesday"   android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_wednesday" android:text="@string/wednesday" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_thursday"  android:text="@string/thursday"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_friday"    android:text="@string/friday"    android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_saturday"  android:text="@string/saturday"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/checkbox_sunday"    android:text="@string/sunday"    android:layout_width="wrap_content" android:layout_height="wrap_content" />

    <!-- Save -->
    <Button android:id="@+id/button_save"          android:text="@string/save"      android:layout_width="wrap_content" android:layout_height="wrap_content" />

</LinearLayout>